--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "wdio wdio.conf.js --tags=@ContinuousIntegration"
+    "test": "wdio --tags=@ContinuousIntegration",
+    "lint": "eslint . --ext .js --ignore-path .gitignore"
   },
   "repository": {
     "type": "git",
@@ -20,10 +21,12 @@
   "devDependencies": {
     "chai": "^3.5.0",
     "cucumber": "^1.3.1",
+    "eslint": "^3.16.1",
     "wdio-cucumber-framework": "^0.2.15",
+    "wdio-cucumber-reporter": "0.0.2",
+    "wdio-junit-reporter": "^0.2.0",
     "wdio-phantomjs-service": "^0.2.2",
     "wdio-selenium-standalone-service": "0.0.8",
-    "wdio-spec-reporter": "0.0.5",
     "webdriverio": "^4.6.2"
   }
 }
