--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "wdio --tags=@ContinuousIntegration",
+    "test": "wdio wdio.conf.dev.js --tags=@ContinuousIntegration",
     "lint": "eslint . --ext .js --ignore-path .gitignore"
   },
   "repository": {
@@ -22,6 +22,7 @@
     "chai": "^3.5.0",
     "cucumber": "^1.3.1",
     "eslint": "^3.16.1",
+    "wdio-allure-reporter": "^0.1.2",
     "wdio-cucumber-framework": "^0.2.15",
     "wdio-cucumber-reporter": "0.0.2",
     "wdio-junit-reporter": "^0.2.0",
