change from firefox to chrome

--- a/package.json
+++ b/package.json
@@ -24,9 +24,10 @@
     "eslint": "^3.16.1",
     "wdio-allure-reporter": "^0.1.2",
     "wdio-cucumber-framework": "^0.2.15",
-    "wdio-cucumber-reporter": "0.0.2",
+    "wdio-cucumber-reporter": "^0.0.2",
     "wdio-junit-reporter": "^0.2.0",
-    "wdio-selenium-standalone-service": "0.0.8",
+    "wdio-phantomjs-service": "^0.2.2",
+    "wdio-selenium-standalone-service": " ^0.0.8",
     "webdriverio": "^4.6.2"
   }
 }
