--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "wdio wdio.conf.dev.js --tags=@ContinuousIntegration",
+    "test": "cucumber-js --tags=@ContinuousIntegration -f json:cucumber-report.json",
     "lint": "eslint . --ext .js --ignore-path .gitignore"
   },
   "repository": {
@@ -20,14 +20,10 @@
   "homepage": "https://github.com/CaseyCurry/LucaTest#readme",
   "devDependencies": {
     "chai": "^3.5.0",
-    "cucumber": "^1.3.1",
+    "chromedriver": "^2.30.1",
+    "cucumber": "^2.3.1",
+    "cucumber-html-reporter": "^2.0.0",
     "eslint": "^3.16.1",
-    "wdio-allure-reporter": "^0.1.2",
-    "wdio-cucumber-framework": "^0.2.15",
-    "wdio-cucumber-reporter": "^0.0.2",
-    "wdio-junit-reporter": "^0.2.0",
-    "wdio-phantomjs-service": "^0.2.2",
-    "wdio-selenium-standalone-service": " ^0.0.8",
-    "webdriverio": "^4.6.2"
+    "selenium-webdriver": "^3.4.0"
   }
 }
